# FerrumChain

./: .dockerignore  .gitignore  BUILD.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  build-node.cmd  docker-compose.yml  index.html  nginx.conf  rust-toolchain.toml
.claude/workflows/: ferrum-build.js
apps/federation-console/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/federation-console/src/: App.jsx  chain.js  encode.js  format.js  main.jsx  rpc.js  scale.js  store.jsx  styles.css  ui.jsx
apps/federation-console/src/views/: Clearing.jsx  Council.jsx  EventLog.jsx  Overview.jsx  Proposals.jsx  Treasury.jsx
apps/id-issuer/: App.xaml  App.xaml.cs  FerrumIdIssuer.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest
apps/id-issuer/Services/: ChainService.cs  IdCard.cs  QrCodeService.cs
apps/interop-console/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/interop-console/src/: App.jsx  chain.js  encode.js  format.js  styles.css  ui.jsx
apps/interop-console/src/views/: Bridge.jsx  EventLog.jsx  Identity.jsx  Overview.jsx  Tax.jsx  Validators.jsx
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/zk/: Cargo.toml
crates/zk/src/: age_proof.rs  bbs.rs  lib.rs  lottery_eligibility.rs  lottery_ownership.rs  tax_bracket.rs
docs/: einvoice-lottery-design.md  system-architecture.md  system-architecture.mmd
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/credential/: Cargo.toml
pallets/credential/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/federation/: Cargo.toml
pallets/federation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  voting.rs  weights.rs
pallets/identity/: Cargo.toml
pallets/identity/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/interop/: Cargo.toml
pallets/interop/src/: benchmarking.rs  grandpa.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/lottery/: Cargo.toml
pallets/lottery/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/tax/: Cargo.toml
pallets/tax/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: consensus.rs  lib.rs
sdk/: README.md  catalog.json
sdk/csharp/: README.md
sdk/csharp/Ferrum.Sdk/: Calls.cs  Ferrum.Sdk.csproj  FerrumClient.cs  Models.cs  Scale.cs
sdk/csharp/examples/Quickstart/: Program.cs  Quickstart.csproj
sdk/flutter/: README.md  pubspec.yaml
sdk/flutter/.dart_tool/: package_config.json  package_graph.json
sdk/flutter/example/: quickstart.dart
sdk/flutter/lib/: ferrum_sdk.dart
sdk/flutter/lib/src/: calls.dart  scale_writer.dart  types.dart
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/network/ferrum/sdk/: Calls.java  Example.java  FerrumClient.java  FerrumTypes.java  ScaleWriter.java
sdk/nodejs/: README.md  package.json
sdk/nodejs/examples/: quickstart.ts
sdk/nodejs/src/: client.ts  helpers.ts  index.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/ferrum_sdk/: __init__.py  client.py  helpers.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: quickstart.rs
sdk/rust/src/: lib.rs  types.rs
