[package]
name = "ferrum-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Ferrum 鐵鏈 sovereign runtime: composes identity/credential/tax/treasury/federation/interop pallets over Aura+GRANDPA PoSA (whitepaper §03/§04/§07)"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# --- FRAME core -------------------------------------------------------------
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# --- FRAME pallets the runtime composes -------------------------------------
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

# --- Substrate primitives ---------------------------------------------------
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }

# --- Ferrum primitives + pallets --------------------------------------------
ferrum-primitives = { workspace = true }
ferrum-zk = { workspace = true }
pallet-identity-fer = { workspace = true }
pallet-credential = { workspace = true }
pallet-tax = { workspace = true }
pallet-treasury-fer = { workspace = true }
pallet-federation = { workspace = true }
pallet-interop = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-try-runtime?/std",
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "frame-system-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "ferrum-primitives/std",
    "ferrum-zk/std",
    "pallet-identity-fer/std",
    "pallet-credential/std",
    "pallet-tax/std",
    "pallet-treasury-fer/std",
    "pallet-federation/std",
    "pallet-interop/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-identity-fer/runtime-benchmarks",
    "pallet-credential/runtime-benchmarks",
    "pallet-tax/runtime-benchmarks",
    "pallet-treasury-fer/runtime-benchmarks",
    "pallet-federation/runtime-benchmarks",
    "pallet-interop/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-identity-fer/try-runtime",
    "pallet-credential/try-runtime",
    "pallet-tax/try-runtime",
    "pallet-treasury-fer/try-runtime",
    "pallet-federation/try-runtime",
    "pallet-interop/try-runtime",
]
