[package]
name        = "pallet-credential"
description = "Ferrum ?菟? ??Verifiable Credentials pallet: issuance/presentation/revocation anchored as commitments (whitepaper 禮05)."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
homepage    = { workspace = true }

[dependencies]
codec      = { workspace = true }
scale-info = { workspace = true }
sp-core    = { workspace = true }
sp-std     = { workspace = true }
sp-runtime = { workspace = true }
frame-support     = { workspace = true }
frame-system      = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
ferrum-primitives = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "ferrum-primitives/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
