[package]
name = "pallet-interop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Ferrum 鐵鏈 — interop pallet: cross-border bridge & clearing (XCM-style messaging, trust registry, XSU multilateral netting, whitepaper §09-§10)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
# GRANDPA light-client finality verification (§09 trust-minimized bridging).
sp-consensus-grandpa = { workspace = true }
finality-grandpa = { workspace = true }
# Needed by mock.rs, which is compiled under both `test` and `runtime-benchmarks`.
# Must be a (optional) regular dependency — dev-dependencies are not linked when
# the crate is built as a dependency with `--features runtime-benchmarks`.
sp-io = { workspace = true, optional = true }

ferrum-primitives = { workspace = true }
# Cross-chain DID resolution reuses the identity pallet's `DidRegistry` trait
# (§09 cross-border identity recognition).
pallet-identity-fer = { workspace = true }
# Cross-border ZK selective-disclosure verification (§09 ZK cross-verify).
ferrum-zk = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-consensus-grandpa/std",
    "finality-grandpa/std",
    "sp-io?/std",
    "ferrum-primitives/std",
    "pallet-identity-fer/std",
    "ferrum-zk/std",
]
runtime-benchmarks = [
    "sp-io",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
