[package]
name = "pallet-lottery"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Ferrum 鐵鏈 — lottery pallet: privacy-preserving e-invoice lottery with tax-proportional eTWD prizes (whitepaper §06)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
# Hashing host functions (blake2_256) for receipt keys, commit hashes, entropy.
sp-io = { workspace = true }

ferrum-primitives = { workspace = true }
# Eligibility-circuit Groth16 verification (§06 ZK ticket registration).
ferrum-zk = { workspace = true }

[dev-dependencies]
# Reservable currency backing the commit bond in the mock runtime.
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "ferrum-primitives/std",
    "ferrum-zk/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
